# tarkov-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  tarkov_schema.py
src/: __init__.py  config.py  graphql_client.py  server.py
src/tools/: __init__.py  items.py  maps.py  market.py  quests.py  traders.py
tarkov_mcp/: __init__.py  __main__.py  config.py  graphql_client.py  schema.py  server.py
tarkov_mcp/tools/: community.py  items.py  maps.py  market.py  quests.py  traders.py
tests/: __init__.py  test_server.py  test_tools.py  tests.py
